--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc:sqlserver://checkpoint02database.database.windows.net
  
 spring.datasource.username=admin_smart
 spring.datasource.password=@dmin_sm2rt
+
+spring.profiles.active=dev
