--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
