--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://checkpoint02database.database.windows.net:1433;database=DbCp02AliciaArthurAnaBrunaLarah;user=admin_smart@checkpoint02database;password=@dmin_sm2rt;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=admin_smart
-spring.datasource.password=@dmin_sm2rt
-
-spring.profiles.active=dev
+spring.datasource.url=jdbc:h2:mem:smartsuplify
+server.error.include-stacktrace=never
+spring.profiles.active=prd
