--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,10 +1,10 @@
 server.error.include-stacktrace=never
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://DESKTOP-P0ST3P3:1433;databaseName=cp2_devops;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://dbserver-cp02-220324.database.windows.net:1433;database=Cp02DataBase;user=admin_smart@dbserver-cp02-220324;password=@dmin_sm2rt;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
-spring.datasource.username=sa
-spring.datasource.password=banco123
+spring.datasource.username=admin_smart
+spring.datasource.password=@dmin_sm2rt
 
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
