--- a/pom.xml
+++ b/pom.xml
@@ -77,16 +77,19 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	    </dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+					</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
