--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 					</image>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.0</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
