--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -8,7 +8,7 @@ spring.datasource.password=@dmin_sm2rt
 
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 
